k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airepubliq
  labels:
    name: airepubliq
